--- a/PoC/typographie/package.json
+++ b/PoC/typographie/package.json
@@ -1,12 +1,19 @@
 {
   "name": "typographie",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "spectrum-colorpicker": "^1.8.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.15.0",
+    "gulp": "^3.9.1"
+  },
+  "description": ""
 }
