--- a/PoC/typographie/package.json
+++ b/PoC/typographie/package.json
@@ -12,8 +12,10 @@
     "spectrum-colorpicker": "^1.8.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "browser-sync": "^2.15.0",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
   },
   "description": ""
 }
